--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>io.takari</groupId>
+				<artifactId>maven</artifactId>
+				<version>0.7.7</version>
+				</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
